<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">禅道</string>
    <string name="action_settings">设置</string>
    <string name="email_feedback">sunhao@cnezsoft.com</string>
    <string name="hint_zentao_address">禅道地址，如zentao.com</string>
    <string name="hint_account">用户名/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="label_login">登录</string>
    <string name="button_loging">正在登录…</string>
    <string name="title_activity_login">登录</string>
    <string name="message_login_failed">登录失败</string>
    <string name="message_login_success">登录成功</string>
    <string name="message_please_login">请先登录</string>

    <string-array name="login_messages">
        <item name="login_message_success">登录成功</item>
        <item name="login_message_connect_failed">无法连接到服务器。</item>
        <item name="login_message_wrong_account">请检查用户名或密码是否正确。</item>
        <item name="login_message_wrong_version">不支持此禅道版本（仅支持禅道专业版4.4+）。</item>
        <item name="login_message_server_error">从禅道服务器返回的数据不正确，请联系管理员。</item>
        <item name="login_message_user_info_required">用户信息不完整。</item>
    </string-array>

    <string name="title_activity_list">我的地盘</string>
    <string name="title_activity_todo_list">我的待办</string>
    <string name="navigation_drawer_open">打开导航</string>
    <string name="navigation_drawer_close">关闭导航</string>
    <string name="text_last_sync">上次同步</string>
    <string name="text_offline">离线</string>
    <string name="text_tomorrow">明天</string>
    <string name="text_yesterday">昨天</string>
    <string name="text_today">今天</string>
    <string name="text_date_day_format">d日</string>
    <string name="text_short_date_format">M月d日</string>
    <string name="text_long_date_format">yyyy年M月d日</string>
    <string name="text_long_datetime_format">yyyy年M月d日 HH:mm</string>
    <string name="text_medium_datetime_format">M月d日 HH:mm:ss</string>
    <string name="text_todo_date_format">计划开始于 M月d日 HH:mm 至</string>
    <string name="button_explore_zentao_pro">了解专业版 {fa-external-link}</string>
    <string name="action_search">搜索</string>
    <string name="action_detail_format">%s详情</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_task_hours_format">估计 %1$sh    消耗%2$sh</string>
    <string name="text_task_hours_left_format">剩余%sh</string>
    <string name="text_confirmed">已确认</string>
    <string name="text_unconfirm">未确认</string>
    <string name="title_activity_entry_detail">详情</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_bug_steps">重现步骤</string>
    <string name="text_no_desc">[没有描述]</string>
    <string name="text_desc">描述</string>
    <string name="text_bug_severity">严重等级 %s</string>
    <string name="text_bug_platform">平台环境</string>
    <string name="text_bug_os">操作系统</string>
    <string name="text_bug_browser">浏览器</string>
    <string name="text_more_info">更多信息</string>
    <string name="text_bug_activecount">激活次数</string>
    <string name="text_bug_openedBuild">影响版本</string>
    <string name="text_story_desc">需求描述</string>
    <string name="text_story_from">来源：</string>
    <string name="action_loading">正在加载</string>
    <string name="text_hello_morning">%s，上午好！</string>
    <string name="text_hello_noon">%s，中午好！</string>
    <string name="text_hello_afternoon">%s，下午好！</string>
    <string name="text_hello_night">%s，晚上好！</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_feedback">反馈bug</string>
    <string name="text_miniute">%s分钟</string>
    <string name="text_version">版本</string>
    <string name="text_about">关于</string>
    <string name="text_reset_sync_time">重置</string>
    <string name="text_sync_frequency">同步频率</string>
    <string name="text_show_notify">显示通知</string>
    <string name="text_logout">注销</string>
    <string name="text_account">帐号</string>
    <string name="text_sync_and_notify">同步与通知</string>
    <string name="text_last_sync_time_format">上次同步：%s</string>
    <string name="text_notify_new_items_format">收到%1$s个新的%2$s</string>
    <string name="text_new_items">新条目</string>
    <string name="text_undone">未完成</string>
    <string name="text_assigned_to">指派给我</string>
    <string name="text_new">新</string>
    <string name="text_new_item_format">新%s</string>
    <string name="text_click_view">点击查看</string>
    <string name="text_feedback_alert">没有在您的设备上找到邮件发送程序，要反馈bug请发邮件至%s。</string>
    <string name="text_syncing">正在同步…</string>
    <string name="text_new_todo">新待办</string>
    <string name="text_sync_success">同步成功</string>
    <string name="text_sync_failure">暂时无法同步</string>
    <string name="text_never_happened">从未发生</string>
    <string name="text_unknown_date">某天</string>
    <string name="text_all_product">拥有产品</string>
    <string name="text_all_project">全部项目</string>
    <string name="text_doing_project">进行中</string>
    <string name="text_normal_product">研发中</string>
    <string name="title_activity_project">项目</string>
    <string name="text_date_at_format">于 %s</string>
    <string name="text_date_to_format">至 %s</string>
    <string name="text_date_end_at">结束于</string>
    <string name="text_project_title_format">%s 个项目</string>
    <string name="text_show_all_items">显示全部项目</string>
    <string name="text_product_title_format">%s 个产品</string>
    <string name="title_activity_product">产品</string>
    <string name="text_show_closed_product">显示已关闭产品</string>
    <string name="text_story_count_format">%s 需求</string>
    <string name="text_changed_story_count_format">%s 变更</string>
    <string name="text_draft_story_count_format">%s 草稿</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="text_project_code">"项目代号"</string>
    <string name="text_project_hours_format">预计 %1$sh   消耗 %2$sh   剩余 %3$sh</string>
    <string name="text_project_hours">工时</string>
    <string name="text_project_active_bug">激活的bug</string>
    <string name="text_product_code">产品代号</string>
    <string name="text_create_at_format">创建于 yyyy年MM日dd日 hh:mm</string>
    <string name="text_product_stories">产品需求</string>
    <string name="text_product_stories_format">激活 %1$s   已变更 %2$s   草稿 %3$s   已关闭 %4$s</string>
    <string name="text_image_format">[图 %s]</string>
    <string name="text_entry_not_found_format">啊呵！没有找到编号为 %1$s 的 %2$s。</string>
    <string name="text_select_sync_freq">请选择同步频率</string>
    <string name="text_entry_list_need_higher_version_format">您所使用的禅道版本过低，暂时无法使用 %s 列表功能。需要禅道专业版4.5以上，请及时联系管理员升级禅道体验最新功能。</string>
    <string name="label_offline_use">{fa-bolt} 离线使用</string>
</resources>
